centered the grid and aligned items to ensure the grid is in the middle of the page

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 body {
-    margin: 0;
-    padding: 0;
     display: flex;
     flex-wrap: wrap;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .grid {
     display: grid;
-    border: 1px solid black;
     width: 400px;
     height: 400px;
 }
@@ -21,5 +22,5 @@ body {
 }
 
 .container {
-    
+
 }
